--- a/pda/index.html
+++ b/pda/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
-
+<div id="root"></div>
 </body>
 </html>
