--- a/web/transition.html
+++ b/web/transition.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
-  <style>
-
-  </style>
+  <link rel="stylesheet" href="./node_modules/antd/dist/antd.min.css">
 </head>
 <body>
-<a class="waves-effect waves-light btn" href="#!">Wave<div class="waves-ripple " data-hold="1517477318937" data-scale="scale(9.9)" data-x="68.28125" data-y="18.859375" style="top:18.859375px;left:68.28125px;opacity:0;-webkit-transition-duration:750ms;-moz-transition-duration:750ms;-o-transition-duration:750ms;transition-duration:750ms;-webkit-transform:scale(9.9);-moz-transform:scale(9.9);-ms-transform:scale(9.9);-o-transform:scale(9.9);transform:scale(9.9);"></div></a>
-<button type="button" class="shit">登录</button>
+
 </body>
 </html>
