--- a/admin/index.html
+++ b/admin/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Title</title>
+  <link rel="stylesheet" href="http://localhost:8090/node_modules/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://localhost:8090/node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
-<body>
-
+<body class="fixed-sidebar full-height-layout gray-bg" style="overflow:hidden">
+<div id="root"></div>
+<script src="http://localhost:8090/node_modules/jquery/dist/jquery.min.js"></script>
+<script src="http://localhost:8090/node_modules/react/dist/react.min.js"></script>
+<script src="http://localhost:8090/node_modules/react-dom/dist/react-dom.min.js"></script>
+<link rel="stylesheet" href="http://localhost:8090/node_modules/bootstrap/dist/js/bootstrap.min.js">
 </body>
 </html>
