--- a/web/index.html
+++ b/web/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>Output Management</title>
+
+    <link rel="stylesheet" href="http://localhost:8090/node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="http://localhost:8090/node_modules/antd/dist/antd.min.css">
+
   </head>
   <body>
   <div id="root"></div>
+
+  <script src="http://localhost:8090/node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="http://localhost:8090/node_modules/react/dist/react.min.js"></script>
+  <script src="http://localhost:8090/node_modules/react-dom/dist/react-dom.min.js"></script>
+  <script src="http://localhost:8090/node_modules/lodash/lodash.min.js"></script>
   </body>
 </html>
